# snake-game

./: .gitignore  CMakeLists.txt  Makefile  README.md  constants.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h  obstacle.cpp  obstacle.h  snake.cpp  structures.h
snake.dSYM/Contents/Resources/Relocations/aarch64/: snake.yml
